# maxwell-protocol-python

./: .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
maxwell/protocol/: maxwell_protocol.py  maxwell_protocol_pb2.py
