[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxwell_protocol"
version = "0.1.0"
authors = [{ name = "Xu Chaoqian", email = "chaoranxu@gmail.com" }]
description = "The maxwell protocol implementation for python."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = ["protobuf >= 3.6.1"]

[project.optional-dependencies]
test = ["pytest == 7.2.0", "pytest-cov[all]"]

[project.urls]
repository = "https://github.com/maxwell-dev/maxwell-protocol-python"
changelog = "https://github.com/maxwell-dev/maxwell-protocol-python/CHANGELOG.md"
