[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Xu Chaoqian", email = "chaoranxu@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["protobuf == 4.21.9"]
description = "The maxwell protocol implementation for python."
license = {file = "LICENSE"}
name = "maxwell-protocol"
readme = "README.md"
requires-python = ">=3.7"
version = "0.5.1"

[project.optional-dependencies]
test = ["pytest >= 7.2.0", "pytest-cov[all]"]

[project.urls]
changelog = "https://github.com/maxwell-dev/maxwell-protocol-python/CHANGELOG.md"
repository = "https://github.com/maxwell-dev/maxwell-protocol-python"

[tool.hatch.metadata]
allow-direct-references = true
